<resources>
    <string name="app_name">Give and Take</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile">User Profile</string>
    <string name="account">Account</string>
    <string name="post">Post</string>
    <string name="home">Home</string>
    <string name="giving_score">Giving Score</string>
    <string name="gavin">Gavin</string>
    <string name="posts" />
    <string name="_42">42</string>
    <string name="some_description_about_me_i_like_code_hehe">Some description about me, I like code hehe</string>
    <string name="give_take"><![CDATA[Give&Take]]></string>
    <string name="taking_score">Taking score</string>
    <string name="_220" />
    <string name="_221">221</string>
    <string name="taking_score2">Taking Score</string>
</resources>